<resources>
    <string name="app_name">Counter</string>
    <string name="title">Title</string>
    <string name="start_value">Start value</string>
    <string name="increment">Increment</string>
    <string name="increment_every_day_at">Increment every day at</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create_new_counter">Create New Counter</string>
    <string name="snack_bar_undo">undo</string>
    <string name="snack_bar_text">Counter deleted</string>
    <string name="edit_counter">Edit Counter</string>
</resources>
