<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:focusable="true"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:nextFocusDown="@id/start_field"
            android:hint="@string/title"/>

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/create_item_spacing"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_value"
            android:inputType="numberSigned|numberDecimal"
            />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/create_item_spacing"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/increment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/increment"
            android:inputType="numberSigned|numberDecimal"
            />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/create_item_spacing"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/time_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/time_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:cursorVisible="false"
            android:hint="@string/increment_every_day_at"/>

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="cancelPressed"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:text="@string/save"
            android:onClick="savePressed"
            />

    </LinearLayout>

</LinearLayout>